--- a/recipes.html
+++ b/recipes.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Recipes</title>
 </head>
 
 <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <div class="skip"><a href="main-content">Skip to Main Content</a></div>
 
     <header>
         <nav>
@@ -22,16 +24,16 @@
 
     <main id="main-content">
         <div>
-            <h2>Guacamole</h2>
-            <span>Origin: Mexican</span>
-            <span>Source: My Recipe</span>
-            <span>Category: Appetizer</span>
+            <h1>Guacamole</h1>
+            <span>Origin: Mexican</span><br>
+            <span>Source: My Recipe</span><br>
+            <span>Category: Appetizer</span><br>
 
-            <img src="images/guacamole.jpg" width="400" alt="">
+            <img src="images/guacamole.jpg" alt="Picture of guacamole">
             <p>Guacamole is a Mexican dip made from mashed avocados, tomatoes, onions, cilantro, lime juice, and chili
                 pepper, creating a creamy, zesty, and versatile condiment often enjoyed with tortilla chips, tacos, and
                 more.</p>
-            <h3>Recipe Ingredients</h3>
+            <h2>Recipe Ingredients</h2>
             <ul>
                 <li>Avocado</li>
                 <li>Lime</li>
@@ -41,7 +43,7 @@
                 <li>Cilantro</li>
             </ul>
 
-            <h3>Recipe Steps</h3>
+            <h2>Recipe Steps</h2>
             <ol>
                 <li>Slice three ripe avocados in half.</li>
                 <li>Scoop them into a mixing bowl.</li>
@@ -50,24 +52,24 @@
                     together.</li>
             </ol>
 
-            <h3>Additional Food images</h3>
-            <img src="images/guacamole_2.jpg" width="200" alt="Guacamole in a bowl">
-            <img src="images/avocado_chips.jpg" width="200" alt="Chips and guacamole">
+            <h2>Additional Food images</h2>
+            <img src="images/guacamole_2.jpg" alt="Guacamole in a bowl">
+            <img src="images/avocado_chips.jpg" alt="Chips and guacamole">
             width="200" alt="Chocolate melting in a boiler">
-            <img src="images/taco.jpg" width="200" alt="Guacamole in a taco">
+            <img src="images/taco.jpg" alt="Guacamole in a taco">
 
             <!-- Yiran Zheng -->
 
-            <h2>BLAT Sandwich</h2>
-            <span>Origin: American</span>
-            <span>Source: My Recipe</span>
-            <span>Category: Main</span>
+            <h1>BLAT Sandwich</h1>
+            <span>Origin: American</span><br>
+            <span>Source: My Recipe</span><br>
+            <span>Category: Main</span><br>
 
-            <img src="images/blat_main.png" width="400" alt="">
+            <img src="images/blat_main.png" alt="Picture of BLAT sandwich">
             <p>A BLAT sandwich is a delicious twist on the classic BLT, featuring crispy bacon, fresh lettuce, ripe
                 tomatoes, and creamy avocado, all sandwiched between slices of bread for a satisfying blend of flavors
                 and textures.</p>
-            <h3>Recipe Ingredients</h3>
+            <h2>Recipe Ingredients</h2>
             <ul>
                 <li>Avocado</li>
                 <li>Bacon</li>
@@ -77,31 +79,31 @@
                 <li>Mayo</li>
             </ul>
 
-            <h3>Recipe Steps</h3>
+            <h2>Recipe Steps</h2>
             <ol>
                 <li>Toasted bread slice spread with mayo.</li>
                 <li>Put sliced avocado, bacons, sliced tomatoes, lettuce on one spread of bread.</li>
                 <li>Put the other slice of bread at the top.</li>
             </ol>
 
-            <h3>Additional Food images</h3>
-            <img src="images/blat_2.jpg" width="200" alt="A BLAT sandwich is placed on a dish">
-            <img src="images/ingredients.jpg" width="200" alt="Ingredients of BLAT sandwich">
+            <h2>Additional Food images</h2>
+            <img src="images/blat_2.jpg" alt="A BLAT sandwich is placed on a dish">
+            <img src="images/ingredients.jpg" alt="Ingredients of BLAT sandwich">
             width="200" alt="Chocolate melting in a boiler">
-            <img src="images/blat_3.jpg" width="200" alt="A BLAT sandwich is made with multigrain bread">
+            <img src="images/blat_3.jpg" alt="A BLAT sandwich is made with multigrain bread">
 
             <!-- Yiran Zheng -->
 
-            <h2>Double Chocolate Cookies</h2>
-            <span>Origin: Michigan</span>
-            <span>Source: Family Recipe</span>
-            <span>Category: Dessert</span>
+            <h1>Double Chocolate Cookies</h1>
+            <span>Origin: Michigan</span><br>
+            <span>Source: Family Recipe</span><br>
+            <span>Category: Dessert</span><br>
 
-            <img src="images/double_chocolate_cookies.png" width="400" alt="">
+            <img src="images/double_chocolate_cookies.png" alt="Picture of coockies">
             <p>My daughter learned to make these cookies at a baking camp at Zingermanns and has tweaked the recipe to
                 fit the taste buds of her siblings. They are extremely sugary so the salt helps to balance it. Note,
                 these cookies are best eaten very quickly.</p>
-            <h3>Recipe Ingredients</h3>
+            <h2>Recipe Ingredients</h2>
             <ul>
                 <li>Unsalted butter</li>
                 <li>Granulated Sugar</li>
@@ -116,7 +118,7 @@
                 <li>Semi-sweet chocolate chunks</li>
             </ul>
 
-            <h3>Recipe Steps</h3>
+            <h2>Recipe Steps</h2>
             <ol>
                 <li>In a mixing bowl cream together the butter, granulated sugar, and brown sugar</li>
                 <li>Add the egg and vanilla extract and beat well</li>
@@ -128,11 +130,11 @@
                 <li>Cook for 12 to 13 minutes at 350 degrees.</li>
             </ol>
 
-            <h3>Additional Food images</h3>
-            <img src="images/double_chocolate_chips.png" width="200" alt="A small pile of chocolate chips">
+            <h2>Additional Food images</h2>
+            <img src="images/double_chocolate_chips.png" alt="A small pile of chocolate chips">
             <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/chocolate-d9ba778.jpg?quality=90&webp=true&resize=600,545"
-                width="200" alt="Chocolate melting in a boiler">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG" width="200"
+                alt="Chocolate melting in a boiler">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Brown_sugar_examples.JPG"
                 alt="Brown sugar in three different shades of darkness">
 
             <!-- Colleen van Lent -->
