--- a/travel.html
+++ b/travel.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Travel</title>
 </head>
 
 <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <div class="skip"><a href="main-content">Skip to Main Content</a></div>
 
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Pets</a></li>
                 <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="travel.html">Travel</a></li>
+                <li><a class="current" href="travel.html">Travel</a></li>
             </ul>
         </nav>
     </header>
@@ -23,12 +25,13 @@
     <main id="main-content">
         <div>
 
-            <h2>Boston</h2>
+            <h1>Boston</h1>
+            <div class="gif">
+                <img src="images/boston_city.gif" alt="Boston city">
+            </div>
+            <img src="images/boston_main.jpg" alt="The view of Boston">
 
-            <img src="images/boston_city.gif" width="400" alt="Boston city">
-            <img src="images/boston_main.jpg" width="400" alt="The view of Boston">
-
-            <h3>Geographical Location: North America</h3>
+            <h2>Geographical Location: North America</h2>
             <p>Boston, Massachusetts, is a city where American history comes to life. With its storied past, including
                 the Boston Tea Party and the Battle of Bunker Hill, the city preserves its heritage through historic
                 landmarks and the Freedom Trail. Beyond history, Boston is a vibrant cultural and academic center, home
@@ -41,34 +44,34 @@
                 culture, and local charm makes it a captivating destination for visitors and a beloved home for its
                 residents.</p>
 
-            <h3>Photo Gallery</h3>
+            <h2>Photo Gallery</h2>
             <figure>
-                <img src="images/harvard.jpg" width="200" alt="Harvard University">
+                <img src="images/harvard.jpg" alt="Harvard University">
                 <figcaption>Harvard University is an iconic Ivy League institution in Cambridge, Massachusetts, renowned
                     for its academic excellence and historic prestige.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/boston_common.jpg" width="200" alt="Boston Common">
+                <img src="images/boston_common.jpg" alt="Boston Common">
                 <figcaption>Boston Common is a historic and beloved urban park located in the heart of Boston, serving
                     as a tranquil oasis amid the city's hustle and a gathering place for both residents and tourists.
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="images/charles_river.jpg" width="200" alt="The Charles River">
+                <img src="images/charles_river.jpg" alt="The Charles River">
                 <figcaption>The Charles River is a picturesque waterway winding through the Boston metropolitan area,
                     offering scenic views and recreational opportunities for residents and visitors alike.</figcaption>
             </figure>
 
             <!-- Yiran Zheng -->
 
-            <h2>Seattle</h2>
+            <h1>Seattle</h1>
 
-            <img src="images/seattle.gif" width="400" alt="Seattle">
-            <img src="images/seattle_main.jpg" width="400" alt="The night view of Seattle">
+            <img src="images/seattle.gif" alt="Seattle">
+            <img src="images/seattle_main.jpg" alt="The night view of Seattle">
 
-            <h3>Geographical Location: North America</h3>
+            <h2>Geographical Location: North America</h2>
             <p>Seattle, nestled in the Pacific Northwest, harmoniously blends city living with nature's beauty. The
                 iconic Space Needle stands tall, offering sweeping views of mountains and water. Seattle's cultural
                 scene thrives with museums, theaters, and a rich music history, while its commitment to sustainability
@@ -78,34 +81,34 @@
                 artisanal goods. Seattle's fusion of innovation, natural allure, and cultural richness makes it a
                 compelling and inviting city.</p>
 
-            <h3>Photo Gallery</h3>
+            <h2>Photo Gallery</h2>
             <figure>
-                <img src="images/space_needle.jpg" width="200" alt="Space Needle">
+                <img src="images/space_needle.jpg" alt="Space Needle">
                 <figcaption>The Space Needle is an iconic Seattle landmark, soaring above the city with its futuristic
                     design and offering stunning panoramic views of the surrounding landscape.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/pike_place.jpg" width="200" alt="Pike Place Market">
+                <img src="images/pike_place.jpg" alt="Pike Place Market">
                 <figcaption>Pike Place Market is a bustling and historic marketplace in Seattle, renowned for its
                     vibrant atmosphere, fresh seafood, and artisanal goods.
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="images/mount_rainer.jpg" width="200" alt="Mount Rainer">
+                <img src="images/mount_rainer.jpg" alt="Mount Rainer">
                 <figcaption>Mount Rainier is a majestic stratovolcano towering over the Pacific Northwest, known for its
                     year-round snow-capped peak and breathtaking alpine landscapes.</figcaption>
             </figure>
 
             <!-- Yiran Zheng -->
 
-            <h2>Hangzhou</h2>
+            <h1>Hangzhou</h1>
 
-            <img src="images/hangzhou.gif" width="400" alt="Hangzhou">
-            <img src="images/hangzhou_main.jpg" width="400" alt="A place at Hangzhou">
+            <img src="images/hangzhou.gif" alt="Hangzhou">
+            <img src="images/hangzhou_main.jpg" alt="A place at Hangzhou">
 
-            <h3>Geographical Location: Asia</h3>
+            <h2>Geographical Location: Asia</h2>
             <p>Hangzhou, situated in eastern China, is a city that seamlessly blends ancient heritage with natural
                 splendor. At the heart of its allure lies the iconic West Lake, a UNESCO World Heritage Site celebrated
                 for its picturesque landscapes. Here, serene waters mirror the surrounding lush gardens, historic
@@ -120,23 +123,23 @@
                 of Hangzhou—a place where tradition harmonizes with innovation, making it a captivating destination for
                 those seeking a glimpse into China's multifaceted cultural heritage.</p>
 
-            <h3>Photo Gallery</h3>
+            <h2>Photo Gallery</h2>
             <figure>
-                <img src="images/westlake.jpg" width="200" alt="Westlake">
+                <img src="images/westlake.jpg" alt="Westlake">
                 <figcaption>West Lake is a UNESCO World Heritage Site in Hangzhou, China, celebrated for its serene
                     waters, enchanting gardens, historic temples, and a profound cultural connection to classical
                     Chinese landscapes.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/lingyin.jpg" width="200" alt="Lingyin Temple">
+                <img src="images/lingyin.jpg" alt="Lingyin Temple">
                 <figcaption>Lingyin Temple, located near West Lake in Hangzhou, is a renowned ancient Buddhist temple
                     known for its rich history, intricate architecture, and serene natural surroundings.
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="images/alibaba.jpeg" width="200" alt="Alibaba">
+                <img src="images/alibaba.jpeg" alt="Alibaba">
                 <figcaption>Alibaba Group is a multinational conglomerate based in China, known for its e-commerce
                     platforms, cloud computing services, and digital technology innovations, playing a pivotal role in
                     shaping the global digital economy.</figcaption>
@@ -144,12 +147,12 @@
 
             <!-- Yiran Zheng -->
 
-            <h2>New York City</h2>
+            <h1>New York City</h1>
 
-            <img src="images/nyc.gif" width="400" alt="New York City">
-            <img src="images/nyc_buildings.jpg" width="400" alt="The buildings of NYC">
+            <img src="images/nyc.gif" alt="New York City">
+            <img src="images/nyc_buildings.jpg" alt="The buildings of NYC">
 
-            <h3>Geographical Location: North America</h3>
+            <h2>Geographical Location: North America</h2>
             <p>New York City, often dubbed the "City that Never Sleeps," is a bustling metropolis like no other. Its
                 iconic skyline, dominated by towering skyscrapers like the Empire State Building and One World Trade
                 Center, symbolizes its ceaseless ambition and innovation. The city's cultural diversity is a defining
@@ -164,23 +167,23 @@
                 where the past meets the future, and where every corner seems to tell a unique story, making New York
                 City an irresistible destination for those seeking inspiration and adventure.</p>
 
-            <h3>Photo Gallery</h3>
+            <h2>Photo Gallery</h2>
             <figure>
-                <img src="images/central_park.jpg" width="200" alt="Central Park">
+                <img src="images/central_park.jpg" alt="Central Park">
                 <figcaption>Central Park is a sprawling urban oasis in the heart of Manhattan, offering a serene escape
                     from the city's hustle and bustle with its lush greenery, scenic waterways, and diverse recreational
                     opportunities.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/brooklyn_bridge.jpg" width="200" alt="The Brooklyn Bridge">
+                <img src="images/brooklyn_bridge.jpg" alt="The Brooklyn Bridge">
                 <figcaption>The Brooklyn Bridge is an iconic suspension bridge spanning the East River, connecting
                     Manhattan and Brooklyn, known for its majestic architecture and historical significance.
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="images/flatiron.jpg" width="200" alt="The Flatiron Building">
+                <img src="images/flatiron.jpg" alt="The Flatiron Building">
                 <figcaption>The Flatiron Building, with its distinctive triangular shape and Beaux-Arts architecture, is
                     a historic landmark nestled in the heart of Manhattan, epitomizing New York City's architectural
                     charm.</figcaption>
@@ -188,12 +191,11 @@
 
             <!-- Yiran Zheng -->
 
-            <h2>Paris</h2>
+            <h1>Paris</h1>
+            <img src="images/paris.gif" alt="Paris">
+            <img src="images/paris_main.jpg" alt="The view of Paris">
 
-            <img src="images/paris.gif" width="400" alt="Paris">
-            <img src="images/paris_main.jpg" width="400" alt="The view of Paris">
-
-            <h3>Geographical Location: Europe</h3>
+            <h2>Geographical Location: Europe</h2>
             <p>Paris, often dubbed the "City of Light," is an enchanting metropolis renowned for its iconic landmarks
                 like the Eiffel Tower and the Louvre Museum. The city's historic charm and vibrant street life, coupled
                 with the scenic Seine River, make it an enduring destination for travelers worldwide.</p>
@@ -201,35 +203,35 @@
                 culinary scene. From croissants to escargot, the city's food culture is a delightful journey for the
                 senses, ensuring a memorable experience for every food lover.</p>
 
-            <h3>Photo Gallery</h3>
+            <h2>Photo Gallery</h2>
             <figure>
-                <img src="images/eiffel.jpg" width="200" alt="The Eiffel Tower">
+                <img src="images/eiffel.jpg" alt="The Eiffel Tower">
                 <figcaption>
                     The Eiffel Tower, an iconic symbol of Paris and an architectural masterpiece, stands as a testament
                     to human ingenuity and offers breathtaking views of the city.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/louvre.jpg" width="200" alt="The Louvre">
+                <img src="images/louvre.jpg" alt="The Louvre">
                 <figcaption>The Louvre, a world-famous art museum, showcases priceless masterpieces like the Mona Lisa,
                     drawing visitors from around the globe.
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="images/macaron.jpg" width="200" alt="Macarons in different flavors">
+                <img src="images/macaron.jpg" alt="Macarons in different flavors">
                 <figcaption>A macaron is a delicate, colorful French confection known for its crisp meringue shell and
                     smooth, flavorful filling.</figcaption>
             </figure>
 
             <!-- Yiran Zheng -->
 
-            <h2>Yellowstone</h2>
+            <h1>Yellowstone</h1>
 
-            <img src="images/yellowstone_cauldron.gif" width="400" alt="Bubbling cauldron.">
-            <img src="images/yellowstone_cauldron.jpg" width="400" alt="Bubbling cauldron">
+            <img src="images/yellowstone_cauldron.gif" alt="Bubbling cauldron.">
+            <img src="images/yellowstone_cauldron.jpg" alt="Bubbling cauldron">
 
-            <h3>Geographical Location: North America</h3>
+            <h2>Geographical Location: North America</h2>
             <p>Yellowstone is the first national park in the United States. It covers over 2.2 million acres, and
                 provides an opportunity to see wildlife and explore geothermal areas. In fact, Yellowstone contains
                 about half the world's active geysers.</p>
@@ -241,15 +243,14 @@
                     href="https://www.instagram.com/touronsofyellowstone/?hl=en">Tourons of Yellowstone</a>, or <a
                     href="https://cowboystatedaily.com/">Cowboy State Daily</a>.</p>
 
-            <h3>Photo Gallery</h3>
+            <h2>Photo Gallery</h2>
             <figure>
-                <img src="images/yellowstone_travertine.JPG" width="200"
-                    alt="A large mound of multi-colored travertine">
+                <img src="images/yellowstone_travertine.JPG" alt="A large mound of multi-colored travertine">
                 <figcaption>Mammoth Hot Springs has a number of actively forming Travertine terraces.</figcaption>
             </figure>
 
             <figure>
-                <img src="images/yellowstone_sunset.jpg" width="200"
+                <img src="images/yellowstone_sunset.jpg"
                     alt="Sunset over mountains with some charred trees in the foreground">
                 <figcaption>The drive to Lamar Valley requires some dangerous roads. But the result is amazing sunset
                     views.</figcaption>
@@ -257,26 +258,30 @@
 
 
             <figure>
-                <video width="200" controls>
-                    <source src="images/yellowstone_prism.MOV">
-                    Your browser does not support the video tag.
-                </video>
+                <div class="video-container">
+                    <video controls>
+                        <source src="images/yellowstone_prism.MOV">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
                 <figcaption>The multicolored layers get their hues from different species of bacteria living in the
                     cooler water around the spring.</figcaption>
             </figure>
 
 
             <figure>
-                <video width="200" controls>
-                    <source src="images/yellowstone_buffalo.MOV">
-                    Your browser does not support the video tag.
-                </video>
+                <div class="video-container">
+                    <video controls>
+                        <source src="images/yellowstone_buffalo.MOV">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
                 <figcaption>The buffalo were so common along the roads in Yellowstone that our mantra became "If it
                     ain't lickin the car, we aren't stopping."</figcaption>
             </figure>
 
             <figure>
-                <img src="images/yellowstone_sulphur_springs.JPG" width="200"
+                <img src="images/yellowstone_sulphur_springs.JPG"
                     alt="A large spring with clouds of sulfur smoke rising from it.">
 
                 <figcaption>If you can handle the odor, the Yellowstone Sulphur Springs is a great place to hike.
