--- a/index.html
+++ b/index.html
@@ -189,12 +189,8 @@
                     <li>Chasing</li>
                 </ul>
                 <!-- Huiyu Su -->
-
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        </div>
     </main>
 
 </body>
